--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -579,6 +579,18 @@ video {
   grid-column: span 3 / span 3;
 }
 
+.row-span-5 {
+  grid-row: span 5 / span 5;
+}
+
+.row-span-6 {
+  grid-row: span 6 / span 6;
+}
+
+.row-span-4 {
+  grid-row: span 4 / span 4;
+}
+
 .grid {
   display: grid;
 }
@@ -613,6 +625,10 @@ video {
 
 .grid-rows-2 {
   grid-template-rows: repeat(2, minmax(0, 1fr));
+}
+
+.grid-rows-6 {
+  grid-template-rows: repeat(6, minmax(0, 1fr));
 }
 
 .items-center {
