--- a/app/base.css
+++ b/app/base.css
@@ -11,3 +11,23 @@
              url("/fonts/Selen-Regular.ttf") format("truetype");
     }
 }
+
+@layer components {
+    .submit-button {
+    	background-image: url("/buttons/submit-idle.png");
+    	background-size: contain;
+    	background-repeat: no-repeat;
+    }
+    .submit-button:hover {
+    	background-image: url("/buttons/submit-hover.png")
+    }
+
+    .reset-button {
+    	background-image: url("/buttons/reset-idle.png");
+    	background-size: contain;
+    	background-repeat: no-repeat;
+    }
+    .reset-button:hover {
+    	background-image: url("/buttons/reset-hover.png")
+    }
+}
