--- a/app/base.css
+++ b/app/base.css
@@ -10,6 +10,15 @@
         src: local("Selen Font"),
              url("/fonts/Selen-Regular.ttf") format("truetype");
     }
+
+    button:disabled {
+        -webkit-filter: grayscale(100%);
+        -moz-filter: grayscale(100%);
+        -o-filter: grayscale(100%);
+        -ms-filter: grayscale(100%);
+            filter: grayscale(100%);
+
+    }
 }
 
 @layer components {
