reverts changes to correct desktop viewport

--- a/app/base.css
+++ b/app/base.css
@@ -62,14 +62,7 @@
     .parts-mask::-webkit-scrollbar {
         display: none;
     }
-    /* ::-webkit-scrollbar { */
-    /*     height: 24px; */
-    /*     width: 12px; */
-    /* } */
-    /* .parts-mask::-webkit-scrollbar-thumb { */
-    /* 	width: 1rem; */
-    /* 	background-clip: padding-box; */
-    /*     background: url("/buttons/scrollbar-prop.png"); */
-    /*     background-repeat: no-repeat; */
-    /* } */
+    .no-parts-mask {
+    	-webkit-mask: none;
+    }
 }
